[gd_scene load_steps=5 format=3 uid="uid://cp0r0w7huoq2"]

[ext_resource type="Script" path="res://Control.gd" id="1_8oy4x"]
[ext_resource type="Texture2D" uid="uid://divbpyve3pm4v" path="res://PixelArtFaisMain/New Piskel (24).png" id="2_qqqes"]
[ext_resource type="Texture2D" uid="uid://c657nappuh7a7" path="res://PixelArtFaisMain/New Piskel (23).png" id="3_g7fp4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w8thy"]
size = Vector2(2087, 1198)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_8oy4x")

[node name="WaterGauge" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 211.0
offset_top = 156.0
offset_right = 243.0
offset_bottom = 188.0
scale = Vector2(10, 10)
max_value = 1000.0
fill_mode = 3
texture_under = ExtResource("2_qqqes")
texture_progress = ExtResource("3_g7fp4")
tint_under = Color(1, 1, 1, 0)
tint_over = Color(0.00392157, 0.105882, 1, 1)
tint_progress = Color(0.254902, 0.188235, 1, 1)

[node name="ClickArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
position = Vector2(990.5, 556)
shape = SubResource("RectangleShape2D_w8thy")
debug_color = Color(0, 0.721569, 0.843137, 0.419608)

[node name="FeedbackLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1155.0
offset_top = 245.0
offset_right = 1549.0
offset_bottom = 428.0

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1298.0
offset_top = 111.0
offset_right = 1679.0
offset_bottom = 449.0

[connection signal="input_event" from="ClickArea" to="." method="_on_click_area_input_event"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
